--- a/config.template.yaml
+++ b/config.template.yaml
@@ -5,7 +5,7 @@ Flask:
   REVERSE_PROXY: true
   APPLICATION_ROOT: /api/sq-challenge/
 Sqlalchemy:
-  DATABASE_URI: postgresql://sm_admin:pass123@127.0.0.1:5432/sm_challenge?application_name=sm_challenge
+  DATABASE_URI: postgresql://sm_challenge:pass123@127.0.0.1:5432/squadmakers?application_name=sm_challenge
   TRACK_MODIFICATIONS: false
 Logging:
   version: 1
